--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'MyFont';
+    font-family: 'SF Pro Display';
     src: url('../assets/fonts/SFPRODISPLAYREGULAR.OTF') format('opentype');
     font-weight: 400;
     font-style: normal;
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-    font-family: 'MyFont';
+    font-family: 'SF Pro Display';
     src: url('../assets/fonts/SFPRODISPLAYMEDIUM.OTF') format('opentype');
     font-weight: 500;
     font-style: normal;
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-    font-family: 'MyFont';
+    font-family: 'SF Pro Display';
     src: url('../assets/fonts/SFPRODISPLAYBOLD.OTF') format('opentype');
     font-weight: 700;
     font-style: normal;
@@ -27,5 +27,5 @@
 }
 
 body {
-   font-family: 'SF Pro Display, -apple-system, BlinkMacSystemFont, sans-serif',
+    font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
 }
